# bertopic_pro

./: .env.example  .gitignore  PRD.md  README.md  RUNNING.md  config.py  create_test_data.py  main.py  pyproject.toml  run.py  test_architecture.py  test_modeling.py  test_preprocessing.py  test_settings.py  test_visualization.py
app/core/: model_manager.py  processor.py  topic_analyzer.py  visualization_generator.py
app/core/workers/: base_worker.py  bertopic_worker.py  download_worker.py  embedding_worker.py
app/ui/: Home.ui  Tab1.ui  Tab2.ui  Tab3.ui  Ui_Home.py  main_window.py
app/ui/styles/: theme.qss
app/ui/tabs/: Ui_Modeling.py  Ui_Preprocess.py  base_tab.py  modeling_tab.py  preprocess_tab.py  settings_tab.py  visualization_tab.py
app/utils/: config_manager.py  file_helpers.py  logger.py  validators.py
tests/test_ui/: web_viz.py
